# svscan

./: LICENSE  README.md  autogen.sh  configure.ac
doc/: FAQ.docx  README.md  fs.tsv.header.md  svscan.bam2tb.header.md  svscan.fs.rpt.rules.md  svscan.fs.tsv.header.explanations.CN.xlsx  svscan.fusion.result.header.md  svscan.report.rules.CN.docx  svscan.static.compile.Makefile.am  svscan.tutorial.md
doc/doc/: svpipe.HSStat.sheet.header.md  svscan.fusion.reads.header.md  svscan.sv.result.header.md  svscan.usage.instructions.md
docs/: README.md
docs/doc/: svpipe.HSStat.sheet.header.md  svscan.exon.estimate.md  svscan.fusion.reads.header.md  svscan.fusion.report.rules.md  svscan.fusion.result.header.md  svscan.rna.fusion.reads.to.dna.md  svscan.sv.result.header.md  svscan.usage.instructions.md
docs/ext/: debug.info.md  svscan.static.compile.Makefile.am
html/: Explain.Fusion.Flags.html  debug.info
src/: .tsvreporter.cpp.swp  CLI.hpp  Doxygen  Makefile.am  Makefile.in  ThreadPool.h  aligncfg.h  aligner.cpp  aligner.h  alndescriptor.h  annotator.cpp  annotator.h  bamsorter.h  bamtotb.cpp  bamtotb.h  bamutil.h  bcfreport.cpp  bed.cpp  bed.h  breakpoint.cpp  breakpoint.h  cgranges.cpp  cgranges.h  dpbamrecord.cpp  dpbamrecord.h  dptra.cpp  edgerecord.h  extanno.cpp  extanno.h  filereader.h  filter.cpp  filter.h  fuseflags.h  fusegene.h  fuserec.h  fusewlist.cpp  fusewlist.h  fusionopt.cpp  fusionopt.h  fusionreporter.cpp  (+68 more)
testdata/: refGene.Anno.sorted.gz.tbi  sv.bcf  sv.bcf.csi  sv.tsv  test.bam.bai  valid.bed
testdata/bcf/: in.list  in1.bcf.csi  in2.bcf  in3.bcf  in3.bcf.csi  in4.bcf  in4.bcf.csi
testdata/bed/: valid.bed
testdata/tsv/: blacklist.tsv  whitelist.tsv
